<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lirelasuite1"
    android:background="@color/newhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ok"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/newhite"
                    app:srcCompat="@drawable/retoure"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"

                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="183dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/conseils"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="372dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/partie3"
                    android:textAlignment="center"
                    android:textColor="@color/rouge"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"

                    android:layout_marginTop="30dp"
                    android:text="@string/solutions"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/solu1"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/solu2"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/solu3"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/solu4"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:srcCompat="@drawable/conseils"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>