<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="846dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ok"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/white"
                    app:srcCompat="@drawable/retoure"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="183dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/conseils"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="200dp"
                    android:layout_height="110dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/fetus"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/conseil1"
                        android:textAlignment="center"
                        android:textColor="@color/blue"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/conseil2"
                        android:textAlignment="center"
                        android:textColor="@color/vert"
                        android:textSize="22dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:orientation="vertical">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="146dp" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="334dp"
            android:layout_marginTop="15dp"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="280dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/article1"
                            android:textAlignment="center"
                            android:textColor="@color/rouge"
                            android:textSize="18dp"
                            android:textStyle="bold"
                            tools:ignore="DuplicateIds" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="103dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/ok"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            tools:ignore="DuplicateIds" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            app:srcCompat="@drawable/fetal" />

                        <Button
                            android:id="@+id/lirelasuite1"
                            android:layout_width="150dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/lirelasuite"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            tools:ignore="TouchTargetSizeCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="280dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/article2"
                            android:textAlignment="center"
                            android:textColor="@color/rouge"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="103dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/lescausesdesouffrancesfoetales"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            app:srcCompat="@drawable/embryo" />

                        <Button
                            android:id="@+id/lirelasuite2"
                            android:layout_width="150dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/lirelasuite"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            tools:ignore="DuplicateIds,TouchTargetSizeCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="280dp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/partie3"
                            android:textAlignment="center"
                            android:textColor="@color/rouge"
                            android:textSize="18dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="103dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/solutions"
                            android:textAlignment="textStart"
                            android:textColor="@color/black"
                            android:textSize="18dp" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            app:srcCompat="@drawable/discussion" />

                        <Button
                            android:id="@+id/lirelasuite3"
                            android:layout_width="150dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/blue"
                            android:text="@string/lirelasuite"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            tools:ignore="TouchTargetSizeCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/barredestaches"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="55dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="7dp"
                    android:backgroundTint="@color/white"
                    app:srcCompat="@drawable/home"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="55dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="95dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/advices" />

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="55dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="7dp"
                    android:backgroundTint="@color/white"
                    app:srcCompat="@drawable/user"
                    tools:ignore="SpeakableTextPresentCheck" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>